--- a/Tabela-Nutricional/package.json
+++ b/Tabela-Nutricional/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.2.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
