--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch --env-file=.env src/server.js"
+    "start": "node --watch src/server.js"
   },
   "author": "",
   "license": "ISC",
